Adding movie-list component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,1 @@
-<div class="container">
-    <ul *ngFor="let movie of movies">
-        <li>
-            {{ movie.title }}
-        </li>
-    </ul>
-
-    <button (click)="getMovie()" class="btn btn-primary">GET</button>
-</div>
+<movie-list></movie-list>
